--- a/app/actor/point-actor.css
+++ b/app/actor/point-actor.css
@@ -1,7 +1,30 @@
-.point-actor {
+.point-actor,
+.point-actor-filter {
 	position: absolute;
 	left: calc(1px * var(--x));
 	top: calc(1px * var(--y));
+}
+
+.point-actor-filter {
+	left: calc(calc(calc(1px * calc(var(--xOff)) + calc(1px * calc(var(--x) - 16)))) - 16px);
+	top: calc(calc(calc(1px * calc(var(--yOff)) + calc(1px * calc(var(--y) - 16)))) - calc(1px * var(--height)));
+	/*height: calc(0px + calc(1px * var(--height)));
+	width: calc(0px + calc(1px * var(--width)));*/
+	width: 64px;
+	height: 64px;
+	/*transform: translate(
+		calc(-50% + calc(0.5px * var(--width)))
+		, calc(-50% + calc(0.5px * var(--height)))
+	);*/
+	background: rgba(255,0,0,0);
+	opacity: 1;
+}
+
+.point-actor-filter {
+	/*background-color: black;*/
+	/*filter: url(#waves);*/
+	backdrop-filter: blur(0px);
+	filter: var(--bgFilter);
 }
 
 .actor-item .sprite {
@@ -17,6 +40,12 @@
 	transform-origin: center bottom;
 	box-shadow: none;
 	background-repeat: no-repeat;
+}
+
+.sprite > svg {
+	position: absolute;
+	top: 0px;
+	left: 0px;
 }
 
 .actor-item.actor-block-marble .sprite {
