--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -163,6 +163,8 @@ section.filters {
 	transition: transform var(--scale-transition);
 	transform: scale(var(--scale));
 	transform-origin: top left;
+	width: calc(100% / var(--scale));
+	height: calc(100% / var(--scale));
 }
 
 .viewport-double-zoom {
@@ -184,8 +186,6 @@ section.filters {
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	min-width: 100%;
-	min-height: 100%;
 }
 
 .viewport-background[data-name^="Foreground"],
@@ -198,13 +198,14 @@ section.filters {
 	z-index: 10000;
 }
 
+.viewport .filters,
 .viewport-content {
 	transform: translate(calc(1px * var(--x)), calc(1px * var(--y)));
 }
 
 .viewport-background {
 	/*transform: translate(calc(1px * var(--xMod)), calc(1px * var(--yMod)));*/
-	transform: translate3d(0,0,0)
+	transform: translate3d(0,0,0);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -244,6 +245,7 @@ section.filters {
 
 .viewport .hud {
 	position: absolute;
+	z-index: 1000;
 	top: 0.5em;
 	right: 0.5em;
 	padding: 1em;
@@ -263,6 +265,11 @@ section.filters {
 
 .viewport .hud tr > td {
 	padding: 0;
+	margin: 0;
+}
+
+.viewport .hud tr > td > * {
+	vertical-align: middle;
 }
 
 .viewport .hud tr > td:nth-child(2) {
@@ -467,7 +474,6 @@ input[type=number]::-webkit-outer-spin-button {
 	pointer-events: none;
 }
 
-
 .change-character {
 	background: black;
 	color: white;
@@ -475,3 +481,15 @@ input[type=number]::-webkit-outer-spin-button {
 	font-size: smaller;
 	border-radius: 5px;
 }
+
+.viewport .filters {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	pointer-events: none;
+}
+
+.viewport .filters.filters-foreground {
+	z-index: 10000;
+}
+
