--- a/app/actor/sonic.css
+++ b/app/actor/sonic.css
@@ -87,19 +87,21 @@
 .actor-item.actor-sonic[data-animation="lightdash"][data-falling="false"] .sprite:after {
 	top: 10px;
 }
-/*
 
-.actor-item.actor-sonic[data-animation="lightdash"][data-falling="true"] .sprite:after {
-	--dash-angle: var(--air-angle);
-}
-*/
+.actor-item.actor-sonic[data-animation="airdash"] .sprite:after,
 .actor-item.actor-sonic[data-animation="lightdash"] .sprite:after {
 	--sprite-offset-x: -0px;
 	--sprite-offset-y: -384px !important;
 
-	transform: scale(1,1) rotate(calc(1rad * var(--air-angle)));
+	transform: rotate(calc(1rad * var(--air-angle)));
+}
 
-	animation: sonic-flicker steps(4) infinite 128ms;
+.actor-item.actor-sonic[data-facing="left"][data-animation="airdash"] .sprite:after {
+	transform: scale(1,1) rotate(calc(calc(-1rad * var(--air-angle)) + 180deg));
+}
+
+.actor-item.actor-sonic[data-animation="lightdash"] .sprite:after {
+	animation: sonic-flicker steps(4) infinite 64ms;
 }
 
 .actor-item.actor-sonic[data-facing="left"][data-animation="lightdash"] .sprite:after {
@@ -130,11 +132,17 @@
 }
 
 
-.actor-item.actor-sonic[data-animation="rolling"] .sprite:after,
-.actor-item.actor-sonic[data-animation="jumping"] .sprite:after {
+.actor-item.actor-sonic[data-animation="jumping"] .sprite:after,
+.actor-item.actor-sonic[data-animation="rolling"] .sprite:after {
 	--sprite-offset-x: -0px;
 	--sprite-offset-y: -192px;
 	animation: sonic-jump steps(7) infinite 256ms;
+
+	/*transform: scale(-1,-1) rotate(calc(calc(-1rad * var(--air-angle)) + 0deg));*/
+}
+
+.actor-item.actor-sonic[data-animation="jumping"] .sprite:after {
+	transform: none;
 }
 
 .actor-item.actor-sonic[data-animation="skidding"] .sprite:after {
