--- a/app/ui/hud-frame.css
+++ b/app/ui/hud-frame.css
@@ -1,10 +1,31 @@
 .hud-top-left {
 	position: absolute;
 	top: 5px;
-	left: 1px;
+	left: 5px;
 	display: flex;
 	flex-direction: column;
-	transform: scale(var(--scale));
+	/*transform: scale(calc(var(--scale) / 2));*/
+	transform-origin: top left;
+	justify-content: flex-start;
+}
+
+.hud-top-right {
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	display: flex;
+	flex-direction: column;
+	/*transform: scale(calc(var(--scale) / 2));*/
+	transform-origin: top left;
+	justify-content: flex-start;
+}
+
+.hud-bottom-right {
+	position: absolute;
+	bottom: 5px;
+	right: 5px;
+	display: flex;
+	flex-direction: column;
 	transform-origin: top left;
 	justify-content: flex-start;
 }
@@ -61,4 +82,119 @@
 }
 
 .timer {
+}
+
+
+.viewport .hud {
+	position: absolute;
+}
+
+.viewport .hud-dark {
+	padding: 3px;
+	border-radius: 3px;
+	background-color: rgba(0,0,0,0.5);
+	pointer-events: initial;
+}
+
+.viewport .hud table {
+	border-spacing: 0;
+	border-collapse: collapse;
+	font-family: 'early_gameboy_regular'
+}
+
+.viewport .hud tr > td {
+	padding: 0;
+	margin: 0;
+}
+
+.viewport .hud tr > td > * {
+	vertical-align: middle;
+	margin-top: -3px;
+}
+
+.viewport .hud tr > td:nth-child(2) {
+	margin: 0;
+	text-align: right;
+}
+
+.status-message .hud-character {
+	background-color: rgb(0,0,0,0.5);
+	animation: sine 1.5s ease-in-out infinite;
+	animation-delay: calc(var(--time) * calc( var(--index) - var(--length) ));
+}
+.status-message .hud-character-string {
+	transition: opacity 0.333s 0.5s ease-in;
+	opacity: 1;
+}
+
+.status-message .hud-character-string.hide {
+	opacity: 0;
+}
+
+@keyframes sine {
+	0%,100% {transform: translateY( var(--distance) );}
+	25% {transform: translateY( calc(-1 * var(--distance)) );}
+	50% {transform: translateY( var(--distance) );}
+	75% {transform: translateY( calc(-1 * var(--distance)) );}
+}
+
+.char-hud {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.hud .char-icon {
+	width: 16px;
+	height: 16px;
+	background-color: #AAA;
+	display: inline-block;
+	margin-left: 5px;
+	border-top: 1px solid white;
+	border-bottom: 1px solid #49486e;
+	border-left: 1px solid #49486e;
+	border-right: 1px solid white;
+	box-sizing: border-box;
+	background-origin: border-box;
+	transform: scaleX(-1);
+}
+
+.hud .char-icon.atomic.superball {
+	background-image: url(/Sonic/monitor-screens.png);
+	background-position: -48px -64px;
+}
+
+.hud .char-icon.sonic {
+	background-image: url(/Sonic/monitor-screens.png);
+	background-position: -0px -16px;
+}
+
+.hud .char-icon.tails {
+	background-image: url(/Sonic/monitor-screens.png);
+	background-position: -16px -16px;
+}
+
+.hud .char-icon.knuckles {
+	background-image: url(/Sonic/monitor-screens.png);
+	background-position: -32px -16px;
+}
+
+.hud .char-icon.eggman {
+	background-image: url(/Sonic/monitor-screens.png);
+	background-position: -0px -64px;
+}
+
+.hud .char-icon.eggrobo {
+	background-image: url(/custom/eggrobo-icon-by-Sms8Powa.png);
+	background-position: -0px -0px;
+}
+
+.hud .char-icon.mecha-sonic {
+	background-image: url(/Sonic/monitor-screens.png);
+	background-position: -16px -64px;
+}
+
+.hud .char-icon.seymour {
+	background-image: url(/Sonic/monitor-screens.png);
+	background-position: -32px -64px;
 }
