Correcting movement bugs.

--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -374,6 +374,8 @@ span.arrow-west {
 	justify-content: center;
 	--distance: 4px;
 	--time: 30ms;
+	z-index: 1000;
+	pointer-events: none;
 }
 
 .topLine > .status-message {
