--- a/app/actor/super-ring.css
+++ b/app/actor/super-ring.css
@@ -18,12 +18,12 @@
 	z-index: 10;
 }
 
-.filter-actor-super-ring.pinch-filter {
+.point-actor-filter {
 	transition: transform 0.5s ease-in-out;
 	transform: scale(0);
 }
 
-.filter-actor-super-ring.pinch-filter.grabbing {
+.point-actor-filter.grabbing {
 	transform: scale(2.5);
 	/*filter: blur(1px) brightness(0) !important;*/
 	/*backdrop-filter: blur(1px) !important;*/
