--- a/app/actor/super-ring.css
+++ b/app/actor/super-ring.css
@@ -19,11 +19,11 @@
 }
 
 .point-actor-filter {
-	transition: transform 0.5s ease-in-out;
+	transition: transform 0.25s linear;
 }
 
 .point-actor-filter.grabbing-start {
-	transform: scale(0);
+	transform: scale(1);
 }
 
 .point-actor-filter.grabbing {
