--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -222,10 +222,10 @@ section.filters {
 	z-index: 1000;
 }
 
-.viewport-background[data-layer="2"] > div {
+.viewport-background[data-layer="0"] > div {
 	/*box-shadow: inset 0 0 4px rgba(255,0,0,0.4);*/
-	border-top: 0.5px solid #020;
-	border-left: 0.5px solid #020;
+	/*border-top: 0.5px solid #020;
+	border-left: 0.5px solid #020;*/
 }
 
 .viewport-background > div {
@@ -453,4 +453,17 @@ input[type=number]::-webkit-outer-spin-button {
 	display: inline-block;
 	right: -1em;
 	top: 0em;
+}
+
+
+.backdrop {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 632px;
+	transform: translateY(calc(calc(var(--y) / var(--yMax)) * calc(256px - 512px)));
+	/*background-image: url(/Sonic/marble-garden-bg.png);
+	background-size: 100% auto;
+	background-position: calc(0.1px * var(--x)) calc(calc(var(--y) / var(--yMax)) * 100%);*/
 }
