--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -160,6 +160,21 @@ section.filters {
 }
 
 .viewport-zoom {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	transition: transform var(--scale-transition);
+	transform: scale(var(--scale));
+	transform-origin: top left;
+	width: calc(100% / var(--scale));
+	height: calc(100% / var(--scale));
+}
+
+.viewport-overlay {
+	position: absolute;
+	pointer-events: none;
+	top: 0px;
+	left: 0px;
 	transition: transform var(--scale-transition);
 	transform: scale(var(--scale));
 	transform-origin: top left;
@@ -380,7 +395,7 @@ span.arrow-west {
 
 .topLine > .status-message {
 	top: 1em;
-	bottom: auto;
+	bottom: 0;
 }
 
 a.github {
@@ -429,6 +444,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 .viewport .filters {
 	position: absolute;
+	top: 0px;
+	left: 0px;
 	width: 100%;
 	height: 100%;
 	pointer-events: none;
@@ -455,15 +472,51 @@ input[type=number]::-webkit-outer-spin-button {
 	top: 0em;
 }
 
+.viewport-frame.seymour-aurora .backdrop::before {
+	opacity: 1;
+}
+
+.viewport-frame .backdrop::before {
+	opacity: 0;
+	background-image: url(/custom/aurora.png);
+	background-size: 100% 55%;
+	background-repeat: no-repeat;
+}
+
+.viewport-frame.seymour-aurora .backdrop {
+	background-color: #323292;
+}
+
+.viewport-frame .backdrop::before {
+	content: ' ';
+	display: block;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	transition: opacity 3s ease-out;
+	/*opacity: 0;*/
+}
 
 .backdrop {
+	transition: background-color 1s 3s ease-out;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	/*background-image: url(/Sonic/marble-garden-bg.png);
+	background-size: 100% auto;
+	background-position: calc(0.1px * var(--x)) calc(calc(var(--y) / var(--yMax)) * 100%);*/
+	background-color: #4848d8;
+	height: 632px;
+}
+
+.backdrop .parallax {
 	position: absolute;
 	left: 0;
 	top: 0;
 	width: 100%;
 	height: 632px;
 	transform: translateY(calc(calc(var(--y) / var(--yMax)) * calc(256px - 512px)));
-	/*background-image: url(/Sonic/marble-garden-bg.png);
-	background-size: 100% auto;
-	background-position: calc(0.1px * var(--x)) calc(calc(var(--y) / var(--yMax)) * 100%);*/
 }
